Document deselection ability in tooltip, fix tooltop showing behind navbar on some browser sizes

--- a/style.css
+++ b/style.css
@@ -207,6 +207,8 @@ select {
 
   -webkit-animation: fadeIn 0.3s ease-in-out;
   animation: fadeIn 0.3s ease-in-out;
+  background-color: white;
+  z-index: 999;
 }
 
 #headerContainer {
